# safe-data-for-safe-medication

./: .gitignore  README.md  pyproject.toml
anonymization/configs/: anonymization_config_K2.yml  data_config_cd.yml  data_config_ci.yml
data/: generate_dummy_data.py
privacy_evaluation/: README.md
privacy_evaluation/anonymeter/: privacy_metrics.py  run_anonymeter.py
privacy_evaluation/membership_inference/: mia_results_summary.py
utility_evaluation/: README.md
utility_evaluation/reference_scripts/: fidelity_metrics.py  run_utility.py  utility_metrics.py
